# clicktt

./: .gitattributes  Cargo.toml  README.md  app.slint  index.d.ts  index.js  main.js  package.json
.github/workflows/: CI.yml  release.yml  reusable-build.yml  reusable-linux-test.yml  reusable-test.yml
__test__/: index.spec.ts
benchmark/: bench.ts
examples/: app.slint  comprehensive.ts  main.js
src/: lib.rs  utils.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
