
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "clicktt"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
