
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "clicktt"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.1", default-features = true, features = ["napi6"] }
napi-derive = "3.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_System_ProcessStatus"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25"
core-graphics = "0.23"
core-foundation = "0.9"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
lazy_static = "1.4"

[build-dependencies]
napi-build = "^2.1.0"

[profile.release]
lto = true
strip = "symbols"
